<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:srcCompat="@drawable/classycar"
        android:contentDescription="@string/IclassyCar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tVModele"
            android:layout_width="264dp"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:gravity="center_vertical"
            android:text="@string/tVModele" />

        <Spinner
            android:id="@+id/spinModele"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.60"
            android:entries="@array/lstModeles"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tVCouleur"
            android:layout_width="264dp"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:gravity="center_vertical"
            android:text="@string/tVCouleur" />

        <Spinner
            android:id="@+id/spinCouleur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.60"
            android:entries="@array/lstCouleurs"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tVNbJours"
            android:layout_width="264dp"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:gravity="center_vertical"
            android:text="@string/tVNbJours" />

        <EditText
            android:id="@+id/eTNbJours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.60"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/eTNbJours"
            android:autofillHints="" />


    </LinearLayout>

    <TextView
        android:id="@+id/tVLorem"
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:inputType="textMultiLine"
        android:text="@string/tVLorem"
        tools:ignore="TextViewEdits" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_weight="1"
                android:text="@string/tVTermes"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <Button
            android:id="@+id/bReserver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bReserver"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>