<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirmation">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:srcCompat="@drawable/classycar"
        android:contentDescription="@string/IclassyCar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tVMerci"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/tVMerci"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/bQuitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bQuitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tVTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="72dp"
        android:text="@string/tVTotal"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVMerci"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tVCout"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:text="@string/tVCout"
        app:layout_constraintBottom_toBottomOf="@+id/tVTotal"
        app:layout_constraintStart_toEndOf="@+id/tVTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>